Fix dark mode text

--- a/src/app/components/expenditures.module.css
+++ b/src/app/components/expenditures.module.css
@@ -15,6 +15,10 @@
   fill: var(--main-text);
 }
 
+.svgText {
+  fill: var(--main-text);
+}
+
 .rep {
   fill: var(--party-republican);
 }
